# MARRAH

./: CMakeCache.txt  CMakeLists.txt  FindPostgreSQL.cmake  PostgreSQLConfig.cmake  README.md  conandeps_legacy.cmake  conanfile.txt  emails.txt  libpqxx-Target-release.cmake  libpqxx-config-version.cmake  libpqxx-config.cmake  libpqxx-release-x86_64-data.cmake  main.cpp  module-PostgreSQL-release-x86_64-data.cmake  ui_mainwindow.ui  users.txt
Cpp_files/: Email_pp.cpp.txt  Email_system.py.txt
Email_database/: Emaildb_db.sql
Email_sys_db/: Email_sys_db.sln
Email_sys_db/Email_sys_db/: Email_sys_db.sqlproj  Table1.sql
Emailsys_cpp/: Emailsys_cpp.sln
Emailsys_cpp/Emailsys_cpp/: Emailsys_cpp.cpp  Emailsys_cpp.vcxproj  Emailsys_cpp.vcxproj.filters
email_system/: Cpp_email.cpp.txt  py_Email.py.txt
testnana/: testnana.sln
testnana/testnana/: testnana.cpp  testnana.vcxproj  testnana.vcxproj.filters
testnana/testnana/x64/Debug/: vc143.idb
testnana/testnana/x64/Debug/testnana.tlog/: testnana.lastbuildstate
testnana/testnana/x64/Release/testnana.tlog/: testnana.lastbuildstate
